[gd_scene load_steps=2 format=3 uid="uid://w7i8t1diden8"]

[ext_resource type="Script" uid="uid://hh3wew55nmhp" path="res://assets/ui/pause_menu.gd" id="1_u2vh8"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("timer")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2vh8")
timer = NodePath("Timers/Timer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_top = 128.0
offset_right = -448.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.19607843, 0.19607843, 0.19607843, 0.49019608)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer"]
layout_mode = 2
text = "PAUSE"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer"]
process_mode = 2
layout_mode = 2
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Quit" type="Button" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
process_mode = 2
layout_mode = 2
text = "Quit"

[node name="Timers" type="Node" parent="."]

[node name="Timer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]
